# COSC_352_FALL_2025

./: .Rhistory  .gitignore  Dockerfile  Judah_Whiddon_project1.py  README.md  app.R  chinonso_egeolu_project1.py  initial.txt  installpackages.R  main.go  proj1.html  read_html_table.py  readdata.R  requirements.txt  run_project2_containers.sh  table_2.csv  table_3.csv  terrence_table  terrence_table.md  wiki_table_data.csv  ● #!_usr_bin_env python3 • Untitled-1 — schidny_balisage_project1 [Codespaces_ curly robot] — Visual Studio Code.html
Abdulai_Hallowell/: .dockerignore  Dockerfile  Project4  README.md  __init__.py  batch_tables.sh  main.py  page.html  read_html_table.py  table_1.csv  table_2.csv  table_3.csv
Abdulai_Hallowell/Project 8/: Analysis.hs  CsvParser.hs  Dockerfile  Main.hs  README.md  Types.hs  baltimore-homicides.cabal
Eian Capers/: table_2.csv
Judah_Whiddon/: Dockerfile
Kamari_Johnson/: Dockerfile
Olivia_Gibson/: Dockerfile  README.md  comparison.html  html_table_to_csv.py  table_1.csv  table_4.csv  table_5.csv
Olivia_Gibson_352P3/: Dockerfile  README  extract_tables.py  extract_tables.sh
Project8/: Dockerfile
amit_bhattarai/: README.md  read_html_table.py
chinonso_egeolu_project1_files/: input.html  table_4.csv
chris_brown/: Dockerfile
clyde_baidoo/: requirements.txt
crystal_coke/: bashscript.sh  copy.py
david_johnny/: project1.py  run_table_extractor.sh
docker_project2/: Dockerfile
homicides-analysis/: README.md
output/: results.json
randolph_scott/Project8/: Dockerfile  Main.hs  homicide-analysis.cabal
rohan_sainju/Project8/: Analysis.hs  Dockerfile  Homicide.hs  Main.hs  README.md  project8.cabal
(+1488 files in other folders)
