cabal-version:       >=1.10
name:                baltimore-homicides
version:             0.1.0.0
build-type:          Simple

executable baltimore-homicides
  hs-source-dirs:      app, src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
  build-depends:       base >=4.14 && <5
  other-modules:       Types
                     , Analysis
                     , CsvParser
