cabal-version: >=1.10
name: homicide-analysis
version: 0.1.0.0
build-type: Simple

executable homicide-analysis
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010

  build-depends:
      base >=4.7 && <5,
      bytestring,
      text,
      cassava,
      vector,
      containers

  ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-export-lists
      -Wmissing-home-modules
