cabal-version:      2.4
name:               project8
version:            0.1.0.0

executable project8
    main-is:          Main.hs
    other-modules:    Homicide, Analysis
    build-depends:    base ^>=4.16.4.0,
                      cassava,
                      vector,
                      bytestring,
                      text,
                      containers
    hs-source-dirs:   .
    default-language: Haskell2010